progresso nas aulas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>alurapic</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
